--- a/.gitmodules
+++ b/.gitmodules
@@ -9,3 +9,7 @@
 	path = deps/mqtt-c
 	url = https://github.com/LiamBindle/MQTT-C.git
 	branch = master
+[submodule "deps/nodesetLoader"]
+	path = deps/nodesetLoader
+	url = https://github.com/open62541/nodesetLoader
+	branch = master
