feat(plugin): Integration of nodesetLoader functionality within open62541 (#5371)

--- a/.gitignore
+++ b/.gitignore
@@ -77,12 +77,14 @@ Makefile
 /exampleClient
 /exampleClient_legacy
 /src_generated/
-/build
+**/build
 /cmake-build*
 /tools/certs/certs/*
 Pipfile
 Pipfile.lock
 .vscode
+**/libxml2
+debian/*
 
 # clangd cache
 .cache/
