Enable faster testing for the boundary conditions.
It's interesting to test what happens if all available IDs are reserved.
Additionally, the only way to roll over the ID counter is to reserve all
available IDs. However, testing such boundary condition involves a large
number of iterations in the implementation. Implemented a special
compile flag to reduce the number of required iterations just for
testing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -551,6 +551,9 @@ mark_as_advanced(UA_ENABLE_DISCOVERY_SEMAPHORE)
 option(UA_ENABLE_UNIT_TESTS_MEMCHECK "Use Valgrind (Linux) or DrMemory (Windows) to detect memory leaks when running the unit tests" OFF)
 mark_as_advanced(UA_ENABLE_UNIT_TESTS_MEMCHECK)
 
+option(UA_ENABLE_REDUCED_ITERATIONS_FOR_TESTING "Reduce the number of iterations required for testing a feature (e.g. to roll over a counter)" OFF)
+mark_as_advanced(UA_ENABLE_REDUCED_ITERATIONS_FOR_TESTING)
+
 set(UA_VALGRIND_INTERACTIVE_INTERVAL 1000 CACHE STRING "The number of iterations to wait before creating the next dump")
 mark_as_advanced(UA_VALGRIND_INTERACTIVE_INTERVAL)
 
