--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -77,6 +77,7 @@
 #cmakedefine UA_ENABLE_PUBSUB_MONITORING
 #cmakedefine UA_ENABLE_PUBSUB_BUFMALLOC
 #cmakedefine UA_ENABLE_PUBSUB_SKS
+#cmakedefine UA_ENABLE_REDUCED_ITERATIONS_FOR_TESTING
 
 #cmakedefine UA_PACK_DEBIAN
 
