feat: add new keyvaluemap structure + utilities

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -239,6 +239,7 @@ endif()
 ua_add_test(check_types_custom.c)
 ua_add_test(check_chunking.c)
 ua_add_test(check_utils.c)
+ua_add_test(check_kvm_utils.c)
 ua_add_test(check_securechannel.c)
 ua_add_test(check_timer.c)
 ua_add_test(check_eventloop.c)
