[TASK] Implement add and remove role functionality
 - This commit adds the default roles in address space and
   handles the add and remove role functionality

Change-Id: Icecd4e197d9b1071390b207828a9b7c723483050

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -192,6 +192,9 @@ mark_as_advanced(UA_ENABLE_SUBSCRIPTIONS_ALARMS_CONDITIONS)
 option(UA_ENABLE_NODEMANAGEMENT "Enable dynamic addition and removal of nodes at runtime" ON)
 mark_as_advanced(UA_ENABLE_NODEMANAGEMENT)
 
+option(UA_ENABLE_ROLE_PERMISSION "Enable role access permission" ON)
+mark_as_advanced(UA_ENABLE_ROLE_PERMISSION)
+
 option(UA_ENABLE_PARSING "Utility functions that require parsing (e.g. NodeId expressions)" ON)
 mark_as_advanced(UA_ENABLE_PARSING)
 
@@ -986,6 +989,7 @@ set(internal_headers ${PROJECT_SOURCE_DIR}/deps/open62541_queue.h
                      ${PROJECT_SOURCE_DIR}/src/pubsub/ua_pubsub_ns0.h
                      ${PROJECT_SOURCE_DIR}/src/pubsub/ua_pubsub_keystorage.h
                      ${PROJECT_SOURCE_DIR}/src/server/ua_server_async.h
+                     ${PROJECT_SOURCE_DIR}/src/server/ua_server_role_access.h
                      ${PROJECT_SOURCE_DIR}/src/server/ua_server_internal.h
                      ${PROJECT_SOURCE_DIR}/src/server/ua_services.h
                      ${PROJECT_SOURCE_DIR}/src/client/ua_client_internal.h
@@ -1020,6 +1024,7 @@ set(lib_sources ${PROJECT_SOURCE_DIR}/src/ua_types.c
                 ${PROJECT_SOURCE_DIR}/src/pubsub/ua_pubsub_readergroup.c
                 ${PROJECT_SOURCE_DIR}/src/pubsub/ua_pubsub_manager.c
                 ${PROJECT_SOURCE_DIR}/src/pubsub/ua_pubsub_ns0.c
+                ${PROJECT_SOURCE_DIR}/src/server/ua_server_role_access.c
                 ${PROJECT_SOURCE_DIR}/src/pubsub/ua_pubsub_keystorage.c
                 ${PROJECT_SOURCE_DIR}/src/pubsub/ua_pubsub_securitygroup.c
                 # services
