--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -27,6 +27,7 @@
 #cmakedefine UA_ENABLE_METHODCALLS
 #cmakedefine UA_ENABLE_NODEMANAGEMENT
 #cmakedefine UA_ENABLE_SUBSCRIPTIONS
+#cmakedefine UA_ENABLE_ROLE_PERMISSION
 #cmakedefine UA_ENABLE_PUBSUB
 #cmakedefine UA_ENABLE_PUBSUB_ENCRYPTION
 #cmakedefine UA_ENABLE_PUBSUB_FILE_CONFIG
