feat(test): Add testnodeset test for nodesetLoader
Import testnodeset.xml file used in test cases of the
nodeset-compiler. This test case is missing to have parity
between compiler and loader when testing.

Signed-off-by: Srdjan Usorac <uso@keba.com>

--- a/tests/nodeset-loader/CMakeLists.txt
+++ b/tests/nodeset-loader/CMakeLists.txt
@@ -32,4 +32,7 @@ if(UA_NAMESPACE_ZERO STREQUAL "FULL")
     target_link_libraries(check_nodeset_loader_compare_di ${LIBS})
     add_test_valgrind(check_nodeset_loader_compare_di ${TESTS_BINARY_DIR}/check_nodeset_loader_compare_di)
 
+    add_compile_definitions(OPEN62541_TESTNODESET_DIR="${CMAKE_BINARY_DIR}/../deps/nodesetloader/nodesets/open62541/")
+    ua_add_test(check_nodeset_loader_testnodeset.c)
+
 endif()
