--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -406,12 +406,14 @@ if(UA_ENABLE_HISTORIZING)
     ua_add_test(client/check_client_historical_data.c)
 endif()
 
-# Test Encryption
+# Test Encryption and Authentication
 
 if(UA_ENABLE_ENCRYPTION)
     add_executable(check_client_encryption client/check_client_encryption.c $<TARGET_OBJECTS:open62541-object> $<TARGET_OBJECTS:open62541-testplugins>)
     target_link_libraries(check_client_encryption ${LIBS})
     add_test_valgrind(client_encryption ${TESTS_BINARY_DIR}/check_client_encryption)
+
+    ua_add_test(client/check_client_authentication.c)
 endif()
 
 if(UA_ENABLE_ENCRYPTION_MBEDTLS)
