--- a/include/open62541/config.h.in
+++ b/include/open62541/config.h.in
@@ -62,6 +62,7 @@
 /* Advanced Options */
 #cmakedefine UA_ENABLE_STATUSCODE_DESCRIPTIONS
 #cmakedefine UA_ENABLE_TYPEDESCRIPTION
+#cmakedefine UA_ENABLE_INLINABLE_EXPORT
 #cmakedefine UA_ENABLE_NODESET_COMPILER_DESCRIPTIONS
 #cmakedefine UA_ENABLE_DETERMINISTIC_RNG
 #cmakedefine UA_ENABLE_DISCOVERY
