feat(tests): Integration test for open62541 nodesetLoader (#5453)
Add integration test consisting of an OPC UA Server
with custom loaded nodesets. Include an OPC UA Client
that connects to the server and browses all of the nodes
defined in the nodeset files. Validate if all of the
nodes within the nodeset(s) can be successfully browsed
(check if any node encountered an `AddNode()` issue).

Signed-off-by: Srdjan Usorac <uso@keba.com>

--- a/tests/nodeset-loader/CMakeLists.txt
+++ b/tests/nodeset-loader/CMakeLists.txt
@@ -36,3 +36,5 @@ if(UA_NAMESPACE_ZERO STREQUAL "FULL")
     ua_add_test(check_nodeset_loader_testnodeset.c)
 
 endif()
+
+add_subdirectory(add_node_integration_test)
