--- a/.github/workflows/build_linux.yml
+++ b/.github/workflows/build_linux.yml
@@ -15,7 +15,7 @@ jobs:
             cmd_deps: |
                 sudo dpkg --add-architecture i386
                 sudo apt-get update
-                sudo apt-get install -y -qq gcc-multilib libsubunit-dev:i386 check:i386
+                sudo apt-get install -y -qq gcc-multilib libsubunit-dev:i386 check:i386 libxml2-dev:i386
             cmd_action: unit_tests_32
           - build_name: "Debug Build & Unit Tests without Subscriptions (gcc)"
             cmd_deps: ""
