Add tests for server side reverse connect
There is no client side atm, so we use a raw TCP connection
and check up to the reverse hello sent state.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -389,6 +389,8 @@ if(UA_ENABLE_ASYNCOPERATIONS)
     ua_add_test(server/check_server_asyncop.c)
 endif()
 
+ua_add_test(server/check_server_reverseconnect.c)
+
 # Test Client
 
 ua_add_test(client/check_client.c)
