--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1143,30 +1143,6 @@ if(UA_ENABLE_PUBSUB_MQTT)
 endif()
 
 if(UA_ENABLE_PUBSUB)
-    list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/plugins/include/open62541/plugin/pubsub_udp.h)
-    list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/ua_pubsub_udp.c)
-    if(UA_ENABLE_PUBSUB_ETH_UADP)
-        list(APPEND default_plugin_headers ${PROJECT_SOURCE_DIR}/plugins/include/open62541/plugin/pubsub_ethernet.h)
-        list(APPEND default_plugin_sources ${PROJECT_SOURCE_DIR}/plugins/ua_pubsub_ethernet.c)
-        find_library(LIB_BPF bpf)
-        if(LIB_BPF)
-            list(APPEND open62541_LIBRARIES bpf)
-        else()
-            message("bpf library not found. XDP functionalities will not be available.")
-        endif()
-    endif()
-    if(UA_ENABLE_PUBSUB_MQTT)
-        if(WIN32)
-            MESSAGE(WARNING "Multithreading is enabled in MQTT plugin. This feature is under development and marked as EXPERIMENTAL")
-        else()
-            list(APPEND default_plugin_headers
-                 ${PROJECT_SOURCE_DIR}/plugins/include/open62541/plugin/pubsub_mqtt.h
-                 ${PROJECT_SOURCE_DIR}/plugins/mqtt/ua_mqtt-c_adapter.h)
-            list(APPEND default_plugin_sources
-                 ${PROJECT_SOURCE_DIR}/plugins/ua_pubsub_mqtt.c
-                 ${PROJECT_SOURCE_DIR}/plugins/mqtt/ua_mqtt-c_adapter.c)
-        endif()
-    endif()
     if(UA_ENABLE_MALLOC_SINGLETON AND UA_ENABLE_PUBSUB_BUFMALLOC)
         list(APPEND lib_sources ${PROJECT_SOURCE_DIR}/src/pubsub/ua_pubsub_bufmalloc.c)
         list(APPEND internal_headers ${PROJECT_SOURCE_DIR}/src/pubsub/ua_pubsub_bufmalloc.h)
@@ -1568,6 +1544,10 @@ else()
     if(UA_ENABLE_DISCOVERY)
         include_directories_private("${PROJECT_SOURCE_DIR}/src/client")
     endif()
+endif()
+
+if(UA_ENABLE_PUBSUB_MQTT)
+  target_include_directories(open62541-object PRIVATE ${PROJECT_SOURCE_DIR}/deps/mqtt-c/include)
 endif()
 
 add_dependencies(open62541-object open62541-code-generation)
