feat(tests): Node ordering test case for open62541-nodeset-loader
Signed-off-by: Srdjan Usorac <uso@keba.com>

--- a/tests/nodeset-loader/CMakeLists.txt
+++ b/tests/nodeset-loader/CMakeLists.txt
@@ -35,6 +35,9 @@ if(UA_NAMESPACE_ZERO STREQUAL "FULL")
     add_compile_definitions(OPEN62541_TESTNODESET_DIR="${CMAKE_BINARY_DIR}/../deps/nodesetloader/nodesets/open62541/")
     ua_add_test(check_nodeset_loader_testnodeset.c)
 
+    add_compile_definitions(OPEN62541_ORDERING_DIR="${CMAKE_BINARY_DIR}/../deps/nodesetloader/nodesets/open62541/")
+    ua_add_test(check_nodeset_loader_ordering_di.c)
+
 endif()
 
 add_subdirectory(add_node_integration_test)
