refactor(deps): Allow duplicate keys in ZipTree

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -218,6 +218,7 @@ function(ua_add_test test_path_relative)
 endfunction()
 
 ua_add_test(check_types_builtin.c)
+ua_add_test(check_ziptree.c)
 
 if(UA_ENABLE_JSON_ENCODING)
     ua_add_test(check_cj5.c)
