fix: change submodule url and branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "deps/mdnsd"]
 	path = deps/mdnsd
 	url = https://github.com/Pro/mdnsd.git
+	branch = master
 [submodule "deps/ua-nodeset"]
 	path = deps/ua-nodeset
 	url = https://github.com/OPCFoundation/UA-Nodeset
