--- a/arch/win32/CMakeLists.txt
+++ b/arch/win32/CMakeLists.txt
@@ -6,6 +6,10 @@ ua_add_architecture("win32")
 list (FIND UA_AMALGAMATION_ARCHITECTURES "win32" _index)
 if (${_index} GREATER -1 OR "${UA_ARCHITECTURE}" STREQUAL "win32")
 
+    set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
+    set(THREADS_PREFER_PTHREAD_FLAG ON)
+    find_package(Threads REQUIRED)
+
     ua_add_architecture_file(${CMAKE_CURRENT_SOURCE_DIR}/ua_clock.c)
     ua_add_architecture_file(${CMAKE_CURRENT_SOURCE_DIR}/ua_architecture_functions.c)
 
@@ -13,7 +17,8 @@ if (${_index} GREATER -1 OR "${UA_ARCHITECTURE}" STREQUAL "win32")
         # find_library(WS2_32 ws2_32 REQUIRED)
         ua_architecture_append_to_library(WS2_32)
         ua_architecture_append_to_library(iphlpapi)
-	#append iphlpapi permanently. Problem: PUBSUB Flag is configured after execution.        
+        ua_architecture_append_to_library(Threads::Threads)
+	#append iphlpapi permanently. Problem: PUBSUB Flag is configured after execution.
 	#if(UA_ENABLE_DISCOVERY_MULTICAST OR UA_ENABLE_PUBSUB)
         #    ua_architecture_append_to_library(iphlpapi)
         #endif()
