change link name

--- a/arch/win32/CMakeLists.txt
+++ b/arch/win32/CMakeLists.txt
@@ -17,7 +17,7 @@ if (${_index} GREATER -1 OR "${UA_ARCHITECTURE}" STREQUAL "win32")
         # find_library(WS2_32 ws2_32 REQUIRED)
         ua_architecture_append_to_library(WS2_32)
         ua_architecture_append_to_library(iphlpapi)
-        ua_architecture_append_to_library(Threads::Threads)
+        ua_architecture_append_to_library(${CMAKE_THREAD_LIBS_INIT})
 	#append iphlpapi permanently. Problem: PUBSUB Flag is configured after execution.
 	#if(UA_ENABLE_DISCOVERY_MULTICAST OR UA_ENABLE_PUBSUB)
         #    ua_architecture_append_to_library(iphlpapi)
