--- a/arch/win32/CMakeLists.txt
+++ b/arch/win32/CMakeLists.txt
@@ -1,7 +1,7 @@
 SET(SOURCE_GROUP ${SOURCE_GROUP}\\win32)
 
 SET(FIND_LIBRARY_USE_LIB64_PATHS TRUE)
-ua_add_architecture("win32")
+# ua_add_architecture("win32")
 
 list (FIND UA_AMALGAMATION_ARCHITECTURES "win32" _index)
 if (${_index} GREATER -1 OR "${UA_ARCHITECTURE}" STREQUAL "win32")
