--- a/arch/win32/CMakeLists.txt
+++ b/arch/win32/CMakeLists.txt
@@ -1,7 +1,7 @@
 SET(SOURCE_GROUP ${SOURCE_GROUP}\\win32)
 
+ua_add_architecture("win32")
 SET(FIND_LIBRARY_USE_LIB64_PATHS TRUE)
-# ua_add_architecture("win32")
 
 list (FIND UA_AMALGAMATION_ARCHITECTURES "win32" _index)
 if (${_index} GREATER -1 OR "${UA_ARCHITECTURE}" STREQUAL "win32")
@@ -14,8 +14,8 @@ if (${_index} GREATER -1 OR "${UA_ARCHITECTURE}" STREQUAL "win32")
     ua_add_architecture_file(${CMAKE_CURRENT_SOURCE_DIR}/ua_architecture_functions.c)
 
     if("${UA_ARCHITECTURE}" STREQUAL "win32")
-        # find_library(WS2_32 ws2_32 REQUIRED)
-        ua_architecture_append_to_library(WS2_32)
+        find_library(WS2_32_LIBRARY ws2_32 REQUIRED)
+        ua_architecture_append_to_library(WS2_32_LIBRARY)
         ua_architecture_append_to_library(iphlpapi)
         # ua_architecture_append_to_library(${CMAKE_THREAD_LIBS_INIT})
 	#append iphlpapi permanently. Problem: PUBSUB Flag is configured after execution.
