refactor: use x86 toolset

--- a/.azure-pipelines/azure-pipelines-win.yml
+++ b/.azure-pipelines/azure-pipelines-win.yml
@@ -11,6 +11,7 @@ jobs:
     CC_SHORTNAME: VS2019
     GENERATOR: Visual Studio 16 2019
     ARCH: Win32
+    TOOLSET: host=x86
     FORCE_CXX: OFF
     vcpkg_cache: C:/vcpkg/installed
     platform: x86
