--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -286,8 +286,10 @@ endif()
 if(UA_ENABLE_SUBSCRIPTIONS)
   ua_add_test(server/check_services_subscriptions.c)
   ua_add_test(server/check_monitoreditem_filter.c)
+if(UA_ENABLE_SUBSCRIPTIONS_EVENTS)
   ua_add_test(server/check_subscription_events.c)
   ua_add_test(server/check_subscription_event_filter.c)
+endif()
 endif()
 
 ua_add_test(server/check_nodestore.c)
